--- a/src/main/css/standard_desktop.css
+++ b/src/main/css/standard_desktop.css
@@ -1,7 +1,7 @@
-/* SEQR - SMALL DESKTOP */
+/* SEQR - STANDARD DESKTOP */
 
-#seqr-module2-desktop {
-	width: 475px;
+#seqr-module1-desktop {
+	width: 525px;
 	left: 50%;
 	margin-left: -277px;
 	position: relative;
@@ -9,13 +9,13 @@
 	background: #fff;
 	float: left;
 }
-#seqr-module2-desktop strong {
+#seqr-module1-desktop strong {
 	font-family: "Whitney-Medium";
 	font-weight: normal;
 	font-size: 14px !important;
 	text-transform: uppercase;
 }
-#seqr-module2-desktop .seqr-module2-header {
+#seqr-module1-desktop .seqr-module1-header {
 	background: #f2f2f2;
 	color: #333333;
 	font-size: 25px;
@@ -26,52 +26,38 @@
 	text-transform: uppercase;
 	font-style: italic;
 }
-#seqr-module2-desktop .seqr-module2-header2 {
-	background: #f2f2f2;
-	color: #333333;
-	font-size: 12px;
-	line-height: 40px;
-	font-family: "Whitney-Book";
-	padding: 7px 15px;
-	margin-bottom: 15px;
-	text-transform: uppercase;
-	font-style: italic;
-	margin-left: 15px;
-	width: 220px;
-	float: right;
-}
-
-#seqr-module2-desktop .seqr-module2-content {
+#seqr-module1-desktop .seqr-module1-content {
 	margin-left: -15px;
 }
-#seqr-module2-desktop .seqr-module2-qrcode {
+#seqr-module1-desktop .seqr-module1-qrcode {
 	float: left;
 	background: #00a391;
 }
-#seqr-module2-desktop .seqr-module2-logo {
+#seqr-module1-desktop .seqr-module1-logo {
 	float: right;
 	padding: 3px;
 }
-#seqr-module2-desktop .seqr-module2-description {
+#seqr-module1-desktop .seqr-module1-description {
 	width: 220px;
 	margin-left: 15px;
+	height: 275px;
 	position: relative;
 	background: #f2f2f2;
 	padding: 15px;
 	font-size: 16px;
 	float: left;
 }
-#seqr-module2-desktop .seqr-module2-description img {
+#seqr-module1-desktop .seqr-module1-description img {
 	width: 100%;
 	padding: 15px 0px;
 }
-#seqr-module2-desktop .seqr-module2-label {
+#seqr-module1-desktop .seqr-module1-label {
 	color: #ffffff;
 	padding-top: 14px;
-	font-size: 15px;
+	font-size: 19px;
 	text-align: center;
 }
-#seqr-module2-desktop .tagline {
+#seqr-module1-desktop .tagline {
 	padding: 10px 0px;
 	font-size: 16px;
 	line-height: 22px;
@@ -80,25 +66,25 @@
 	font-style: italic;
 	text-align: center;
 }
-#seqr-module2-desktop .video {
+#seqr-module1-desktop .video {
 	padding: 10px 0px;
 }
-#seqr-module2-desktop ul.seqr-module2-download {
+#seqr-module1-desktop ul.seqr-module1-download {
 	text-align: center;
 	margin: 0;
 	padding: 0px;
 }
-#seqr-module2-desktop ul.seqr-module2-download li {
+#seqr-module1-desktop ul.seqr-module1-download li {
 	text-align: center;
 	margin: 0px 10px;
 	display: inline-block;
 }
-#seqr-module2-desktop .seqr-module2-download img {
+#seqr-module1-desktop .seqr-module1-download img {
 	width: 20px;
 	padding: 0px 5px;
 	float: left;
 }
-#seqr-module2-desktop .seqr-module2-download a {
+#seqr-module1-desktop .seqr-module1-download a {
 	color: #393939;
 	display: block;
 	font-size: 12px;
@@ -106,17 +92,17 @@
 	text-decoration: none;
 	text-align: left;
 }
-#seqr-module2-desktop .seqr-module2-qrcode {
+#seqr-module1-desktop .seqr-module1-qrcode {
 	position: relative;
-	width: 180px;
-	height: 215px;
+	width: 230px;
+	height: 275px;
 	margin-left: 15px;
 	background: #00a391;
 	padding: 15px;
 }
-#seqr-module2-desktop .seqr-module2-qrcode img {
+#seqr-module1-desktop .seqr-module1-qrcode img {
 	width: 100%;
 }
-#seqr-module2-desktop .seqr-module2-link {
+#seqr-module1-desktop .seqr-module1-link {
 	display: none;
 }
