--- a/src/main/templates/standard_mobile.html
+++ b/src/main/templates/standard_mobile.html
@@ -18,7 +18,7 @@
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png">Android</a></li>
 			</ul>
 			
-			<iframe width="220px" height="123px" src="https://www.youtube.com/embed/rUoVwt8Lq0g?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720" frameborder="0" allowfullscreen class="video"></iframe>
+			<iframe width="230px" height="123px" src="http://www.youtube.com/embed/rUoVwt8Lq0g?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720" frameborder="0" class="video"></iframe>
 			
 			<div class="tagline" data-translate="tagline">SEQR is the most convenient mobile payment solution. Paying is as easy online as in stores.</div>
 		</div>
