--- a/src/main/css/small_mobile.css
+++ b/src/main/css/small_mobile.css
@@ -2,12 +2,12 @@
 
 #seqr-module2-mobile {
 	max-width: 260px;
-	left: 50%;
-	margin-left: -145px;
 	position: relative;
 	padding: 15px;
 	background: #fff;
 	float: left;
+	border: 1px solid #ccc;
+	margin: 10px;
 }
 #seqr-module2-mobile strong {
 	font-family: "Whitney-Medium";
@@ -65,7 +65,7 @@
 #seqr-module2-mobile .tagline {
 	display: none;
 	padding: 10px 0px;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 22px;
 	float: left;
 	font-style: italic;
