--- a/src/main/css/small_unsupported.css
+++ b/src/main/css/small_unsupported.css
@@ -2,12 +2,12 @@
 
 #seqr-module2-unsupported {
 	max-width: 260px;
-	left: 50%;
-	margin-left: -145px;
 	position: relative;
 	padding: 15px;
 	background: #fff;
 	float: left;
+	border: 1px solid #ccc;
+	margin: 10px;
 }
 #seqr-module2-unsupported a {
 	color: #333;
@@ -94,7 +94,7 @@
 #seqr-module2-unsupported .tagline {
 	display: none;
 	padding: 10px 0px;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 22px;
 	float: left;
 	font-style: italic;
