--- a/src/main/css/standard_desktop.css
+++ b/src/main/css/standard_desktop.css
@@ -2,12 +2,12 @@
 
 #seqr-module1-desktop {
 	width: 525px;
-	left: 50%;
-	margin-left: -277px;
 	position: relative;
 	padding: 15px;
 	background: #fff;
 	float: left;
+	border: 1px solid #ccc;
+	margin: 10px;
 }
 #seqr-module1-desktop strong {
 	font-family: "Whitney-Medium";
@@ -59,7 +59,7 @@
 }
 #seqr-module1-desktop .tagline {
 	padding: 10px 0px;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 22px;
 	display: block;
 	float: left;
