--- a/src/main/templates/small_desktop.html
+++ b/src/main/templates/small_desktop.html
@@ -5,7 +5,7 @@
 		<!-- QR CODE -->		
 		<div class="seqr-module2-qrcode"> 
 			<!-- ADD SEQR QR CODE LINK -->
-			<img src="http://seqr.com/se-qr-web/qrgenerator?code=HTTP://SEQR.SE/[invoiceId]">
+			<img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/[invoiceId]">
 			<div class="seqr-module2-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
 
