--- a/src/main/templates/standard_desktop.html
+++ b/src/main/templates/standard_desktop.html
@@ -8,7 +8,7 @@
 	<div class="seqr-module1-content">
 		<!-- QR CODE -->		
 		<div class="seqr-module1-qrcode"> 
-			<img src="http://seqr.com/se-qr-web/qrgenerator?code=HTTP://SEQR.SE/[invoiceId]">
+			<img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/[invoiceId]">
 			<div class="seqr-module1-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
 
