--- a/src/main/templates/standard_mobile.html
+++ b/src/main/templates/standard_mobile.html
@@ -8,7 +8,7 @@
 	<div class="seqr-module1-content">
 		<!-- LINK -->		
 		<div class="seqr-module1-link"> 
-			<a href="SEQR-DEBUG://SEQR.SE/R[invoiceId]" class="seqr-module1-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
+			<a href="SEQR-DEBUG://SEQR.SE/R<%= invoiceId %>" class="seqr-module1-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
 		</div>
 		
 		<div class="seqr-module1-description">	
