--- a/src/main/templates/standard_desktop.html
+++ b/src/main/templates/standard_desktop.html
@@ -8,7 +8,7 @@
 	<div class="seqr-module1-content">
 		<!-- QR CODE -->		
 		<div class="seqr-module1-qrcode"> 
-			<div class="seqr-module1-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/<%= invoiceId %>"></div>
+			<div class="seqr-module1-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
 			<div class="seqr-module1-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
 
