--- a/src/main/templates/small_desktop.html
+++ b/src/main/templates/small_desktop.html
@@ -1,21 +1,21 @@
 <!-- SEQR - SMALL DESKTOP -->
-<div id="seqr-module2-desktop">
+<div id="seqr-desktop">
 
-	<div class="seqr-module2-content">
+	<div class="seqr-content">
 		<!-- QR CODE -->		
-		<div class="seqr-module2-qrcode"> 
+		<div class="seqr-qrcode"> 
 			<!-- ADD SEQR QR CODE LINK -->
-			<div class="seqr-module2-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
-			<div class="seqr-module2-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
+			<div class="seqr-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
+			<div class="seqr-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
 
-		<div class="seqr-module2-header2">
-			<img src="<%= baseURL %>/images/seqr-logo.png" height="25" class="seqr-module2-logo">
+		<div class="seqr-header2">
+			<img src="<%= baseURL %>/images/seqr-logo.png" height="25" class="seqr-logo">
 			The Mobile Wallet
 		</div>
 
-		<div class="seqr-module2-description">	
-			<ul class="seqr-module2-download">
+		<div class="seqr-description">	
+			<ul class="seqr-download">
 				<strong data-translate="download">Download the SEQR app now</strong><br>
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png">iPhone</a></li>
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png">Android</a></li>
