--- a/src/main/templates/small_mobile.html
+++ b/src/main/templates/small_mobile.html
@@ -1,19 +1,19 @@
 <!-- SEQR - SMALL MOBILE -->
-<div id="seqr-module2-mobile">
-	<div class="seqr-module2-header">
+<div id="seqr-mobile">
+	<div class="seqr-header">
 		<span data-translate="header">The Mobile Wallet</span>
-		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="22" class="seqr-module2-logo"></a>
+		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="22" class="seqr-logo"></a>
 	</div>
 
-	<div class="seqr-module2-content">
+	<div class="seqr-content">
 		<!-- LINK -->		
-		<div class="seqr-module2-link"> 
+		<div class="seqr-link"> 
 			<!-- ADD SEQR LINK -->
-			<a href="SEQR-DEBUG://SEQR.SE/R<%= invoiceId %>" class="seqr-module2-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
+			<a href="SEQR-DEBUG://SEQR.SE/R<%= invoiceId %>" class="seqr-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
 		</div>
 		
-		<div class="seqr-module2-description">	
-			<ul class="seqr-module2-download">
+		<div class="seqr-description">	
+			<ul class="seqr-download">
 				<strong data-translate="download">Download the SEQR app now</strong><br>
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png">iPhone</a></li>
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png">Android</a></li>
