--- a/src/main/templates/standard_desktop.html
+++ b/src/main/templates/standard_desktop.html
@@ -1,27 +1,32 @@
 <!-- SEQR - STANDARD DESKTOP -->
-<div id="seqr-module1-desktop">
-	<div class="seqr-module1-header">
+<div id="seqr-desktop">
+	<div class="seqr-header">
 		<span data-translate="header">The Mobile Wallet</span>
-		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="30" class="seqr-module1-logo"></a>
+		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="30" class="seqr-logo"></a>
 	</div>
-
-	<div class="seqr-module1-content">
+	<div class="seqr-content">
 		<!-- QR CODE -->		
-		<div class="seqr-module1-qrcode"> 
-			<div class="seqr-module1-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
-			<div class="seqr-module1-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
+		<div class="seqr-qrcode"> 
+			<div class="seqr-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
+			<div class="seqr-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
-
-		<div class="seqr-module1-description">	
-			<ul class="seqr-module1-download">
+		<div class="seqr-description">	
+			<ul class="seqr-download">
 				<strong data-translate="download">Download the SEQR app now</strong><br>
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png">iPhone</a></li>
 				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png">Android</a></li>
 			</ul>
-			
 			<iframe width="220px" height="123px" src="http://www.youtube.com/embed/rUoVwt8Lq0g?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720" frameborder="0" class="video"></iframe>
-			
 			<div class="tagline" data-translate="tagline">SEQR is the most convenient mobile payment solution. Paying is as easy online as in stores.</div>
 		</div>
 	</div>
+
+	<!-- STATUS PAID -->		
+	<div class="SEQR_STATUS SEQR_STATUS_PAID">
+		<img src="<%= baseURL %>/images/paymentdone.png" width="150">
+		<div class="seqr-content-paymentcomplete-message-title">
+		Payment done
+		</div>
+	</div>
+
 </div>
