--- a/src/main/css/small_desktop.css
+++ b/src/main/css/small_desktop.css
@@ -18,13 +18,14 @@
 #seqr-desktop .seqr-header {
 	background: #f2f2f2;
 	color: #333333;
-	font-size: 25px;
+	font-size: 12px;
 	line-height: 40px;
 	font-family: "Whitney-Book";
 	padding: 7px 15px;
 	margin-bottom: 15px;
 	text-transform: uppercase;
 	font-style: italic;
+	text-align: left !important;
 }
 #seqr-desktop .seqr-header2 {
 	background: #f2f2f2;
@@ -125,4 +126,25 @@
 }
 #seqr-desktop .seqr-link {
 	display: none;
+}
+
+/* STATUS PAID */
+
+#seqr-desktop .SEQR_STATUS_PAID {
+	height: 245px;
+	width: 475px;
+	background: #ffffff;
+	position: absolute;
+	bottom: 15px;
+	text-align: center;
+	visibility: hidden;
+}
+#seqr-desktop .SEQR_STATUS_PAID img.check {
+	padding: 10px 0px;
+}
+#seqr-desktop .seqr-content-paymentcomplete-message-title {
+	font-size: 35px;
+	font-family: "Whitney-Book";
+	text-transform: uppercase;
+	color: #00a391;
 }
