--- a/src/main/templates/small_desktop.html
+++ b/src/main/templates/small_desktop.html
@@ -24,4 +24,18 @@
 			<div class="tagline" data-translate="tagline">SEQR is the most convenient mobile payment solution. Paying is as easy online as in stores.</div>
 		</div>
 	</div>
+	
+	<!-- STATUS PAID -->		
+	<div class="SEQR_STATUS SEQR_STATUS_PAID">
+		<div class="seqr-header">
+			<span data-translate="header">The Mobile Wallet</span>
+			<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="30" class="seqr-logo"></a>
+		</div>
+
+		<img src="<%= baseURL %>/images/paymentdone.png" width="100" class="check">
+		<div class="seqr-content-paymentcomplete-message-title">
+		Payment done
+		</div>
+	</div>
+	
 </div>
