Changed to google QR code generation

--- a/src/main/templates/small_desktop.html
+++ b/src/main/templates/small_desktop.html
@@ -5,7 +5,7 @@
 		<!-- QR CODE -->		
 		<div class="seqr-qrcode"> 
 			<!-- ADD SEQR QR CODE LINK -->
-			<div class="seqr-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
+			<div class="seqr-qr-code-wrapper"><img src="https://chart.googleapis.com/chart?chs=210x210&cht=qr&chld=M|0&chl=HTTP%3A%2F%2FSEQR.SE%2FR<%= invoiceId %>"></div>
 			<div class="seqr-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
 
