--- a/src/main/templates/standard_desktop.html
+++ b/src/main/templates/standard_desktop.html
@@ -6,8 +6,8 @@
 	</div>
 	<div class="seqr-content">
 		<!-- QR CODE -->		
-		<div class="seqr-qrcode"> 
-			<div class="seqr-qr-code-wrapper"><img src="<%= apiURL %>/qrcode?HTTP://SEQR.SE/R<%= invoiceId %>"></div>
+		<div class="seqr-qrcode">
+			<div class="seqr-qr-code-wrapper"><img src="https://chart.googleapis.com/chart?chs=210x210&cht=qr&chld=M|0&chl=HTTP%3A%2F%2FSEQR.SE%2FR<%= invoiceId %>"></div>
 			<div class="seqr-label" data-translate="scan">SCAN TO PAY WITH SEQR</div>
 		</div>
 		<div class="seqr-description">	
