Changed to SEQR demo url

--- a/src/main/templates/small_mobile.html
+++ b/src/main/templates/small_mobile.html
@@ -9,7 +9,7 @@
 		<!-- LINK -->		
 		<div class="seqr-link"> 
 			<!-- ADD SEQR LINK -->
-			<a href="SEQR-DEBUG://SEQR.SE/R<%= invoiceId %>" class="seqr-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
+			<a href="SEQR-DEMO://SEQR.SE/R<%= invoiceId %>" class="seqr-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
 		</div>
 		
 		<div class="seqr-description">	
