--- a/src/main/css/standard_desktop.css
+++ b/src/main/css/standard_desktop.css
@@ -56,7 +56,7 @@
 	padding: 10px;
 	background: #fff;
 }
-#seqr-desktop .SEQR_STATUS_PAID {
+#seqr-desktop .SEQR_STATUS {
 	height: 305px;
 	width: 525px;
 	background: #ffffff;
@@ -65,7 +65,7 @@
 	text-align: center;
 	visibility: hidden;
 }
-#seqr-desktop .SEQR_STATUS_PAID img {
+#seqr-desktop .SEQR_STATUS img {
 	padding: 30px 0px;
 }
 #seqr-desktop .seqr-content-paymentcomplete-message-title {
