--- a/src/main/templates/small_mobile.html
+++ b/src/main/templates/small_mobile.html
@@ -1,25 +1,36 @@
 <!-- SEQR - SMALL MOBILE -->
 <div id="seqr-mobile">
 	<div class="seqr-header">
-		<span data-translate="header">The Mobile Wallet</span>
+		<span data-translate="header"><%= text.header %></span>
 		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="22" class="seqr-logo"></a>
 	</div>
 
 	<div class="seqr-content">
 		<!-- LINK -->		
 		<div class="seqr-link"> 
-			<!-- ADD SEQR LINK -->
-			<a href="SEQR-DEMO://SEQR.SE/R<%= invoiceId %>" class="seqr-label" data-translate="press">PRESS TO PAY WITH SEQR</a>
+			<a href="SEQR-DEMO://SEQR.SE/R<%= invoiceReference %>" class="seqr-label" data-translate="press"><%= text.press %></a>
 		</div>
 		
 		<div class="seqr-description">	
 			<ul class="seqr-download">
-				<strong data-translate="download">Download the SEQR app now</strong><br>
-				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png">iPhone</a></li>
-				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png">Android</a></li>
+				<strong data-translate="download"><%= text.download %></strong><br>
+				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png"><%= text.iphone %></a></li>
+				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png"><%= text.android %></a></li>
 			</ul>
-						
-			<div class="tagline" data-translate="tagline">SEQR is the most convenient mobile payment solution. Paying is as easy online as in stores.</div>
+			<div class="tagline" data-translate="tagline"><%= text.tagline %></div>
 		</div>
 	</div>
+
+	<!-- STATUS PAID -->
+	<div class="SEQR_STATUS SEQR_STATUS_PAID">
+		<img src="<%= baseURL %>/images/paymentdone.png" width="150">
+		<div class="seqr-content-paymentcomplete-message-title"><%= text.paid %></div>
+	</div>
+
+	<!-- STATUS CANCELED -->
+	<div class="SEQR_STATUS SEQR_STATUS_CANCELED">
+		<img src="<%= baseURL %>/images/paymentcanceled.png" width="150">
+		<div class="seqr-content-paymentcomplete-message-title"><%= text.canceled %></div>
+	</div>
+
 </div>
