--- a/src/main/templates/standard_unsupported.html
+++ b/src/main/templates/standard_unsupported.html
@@ -1,17 +1,16 @@
 <!-- SEQR - UNSUPPORTED MOBILE DEVICES -->
 <div id="seqr-unsupported">
 	<div class="seqr-header">
-		<span data-translate="header">The Mobile Wallet</span>
+		<span data-translate="header"><%= text.header %></span>
 		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="22" class="seqr-logo"></a>
 	</div>
 
 	<div class="seqr-content">
 		<div class="seqr-unsupported-message">
 
-			<h2 data-translate="notsupporteddevicetitle">SEQR is available for iPhone and Android.</h2>
-			<div class="seqr-unsupported-text" data-translate="notsupporteddevice">We are sorry, but SEQR doesn't support the device you want to pay with. Do you wish for the SEQR app to have support for your phone?
-			</div>
-			<div class="seqr-link"><a href="" data-translate="notsupporteddevicelink">TELL US</a></div>
+			<h2 data-translate="notsupporteddevicetitle"><%= text.notsupporteddevicetitle %></h2>
+			<div class="seqr-unsupported-text" data-translate="notsupporteddevice"><%= text.notsupporteddevice %></div>
+			<div class="seqr-link"><a href="" data-translate="notsupporteddevicelink"><%= text.notsupporteddevicelink %></a></div>
 
 		</div>
 	</div>
