--- a/src/main/templates/small_desktop.html
+++ b/src/main/templates/small_desktop.html
@@ -2,26 +2,23 @@
 <div id="seqr-desktop">
 
 	<div class="seqr-content">
-		<!-- QR CODE -->
+
+        <img src="<%= baseURL %>/images/seqr-logo-horizontal-tagline-color.png" height="55" class="seqr-logo">
+
+        <!-- QR CODE -->
 		<div class="seqr-qrcode"> 
 			<!-- ADD SEQR QR CODE LINK -->
 			<div class="seqr-qr-code-wrapper"><img src="https://chart.googleapis.com/chart?chs=210x210&cht=qr&chld=M|0&chl=HTTP%3A%2F%2FSEQR.SE%2FR<%= invoiceReference %>"></div>
 			<div class="seqr-label" data-translate="scan"><%= text.scan %></div>
 		</div>
 
-		<div class="seqr-header2">
-			<img src="<%= baseURL %>/images/seqr-logo.png" height="25" class="seqr-logo">
-			<%= text.header %>
-		</div>
-
 		<div class="seqr-description">
 			<ul class="seqr-download">
 				<strong data-translate="download"><%= text.download %></strong><br>
-				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png"><%= text.iphone %></a></li>
-				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png"><%= text.android %></a></li>
+				<li><a href="https://itunes.apple.com/app/seqr/id494224742?l=sv&mt=8" target="_blank"><img src="<%= baseURL %>/images/iphone.png"><%= text.iphone %></a></li>
+				<li><a href="https://play.google.com/store/apps/details?id=com.seamless.seqr" target="_blank"><img src="<%= baseURL %>/images/android.png"><%= text.android %></a></li>
+				<li><a href="http://www.windowsphone.com/sv-se/store/app/seqr/7c25ac1c-dfb7-4cd5-b040-fdeef6ab09a8" target="_blank"><img src="<%= baseURL %>/images/windows.png"><%= text.windows %></a></li>
 			</ul>
-						
-			<div class="tagline" data-translate="tagline"><%= text.tagline %></div>
 		</div>
 	</div>
 	
