--- a/src/main/templates/standard_mobile.html
+++ b/src/main/templates/standard_mobile.html
@@ -1,37 +1,40 @@
 <!-- SEQR - STANDARD MOBILE -->
 <div id="seqr-mobile">
-	<div class="seqr-header">
-		<span data-translate="header"><%= text.header %></span>
-		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="22" class="seqr-logo"></a>
-	</div>
+    <div class="seqr-content">
+        <img src="<%= baseURL %>/images/seqr-logo-horizontal-tagline-color.png" height="55" class="seqr-logo">
+        <!-- LINK -->
+        <div class="seqr-link">
+            <a href="SEQR-DEMO://SEQR.SE/R<%= invoiceReference %>" class="seqr-label" data-translate="press"><%=
+                text.press %></a>
+        </div>
 
-	<div class="seqr-content">
-		<!-- LINK -->		
-		<div class="seqr-link"> 
-			<a href="SEQR-DEMO://SEQR.SE/R<%= invoiceReference %>" class="seqr-label" data-translate="press"><%= text.press %></a>
-		</div>
-		
-		<div class="seqr-description">	
-			<ul class="seqr-download">
-				<strong data-translate="download"><%= text.download %></strong><br>
-				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/iphone.png"><%= text.iphone %></a></li>
-				<li><a href="http://www.seqr.com/app" target="_blank"><img src="<%= baseURL %>/images/android.png"><%= text.android %></a></li>
-			</ul>
-			<iframe width="230px" height="123px" src="http://www.youtube.com/embed/rUoVwt8Lq0g?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720" frameborder="0" class="video"></iframe>
-			<div class="tagline" data-translate="tagline"><%= text.tagline %></div>
-		</div>
-	</div>
+        <div class="seqr-description">
+            <iframe width="230px" height="123px"
+                    src="http://www.youtube.com/embed/GST4ofKoEM4?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720"
+                    frameborder="0" class="video"></iframe>
+            <ul class="seqr-download">
+                <li><a href="https://itunes.apple.com/app/seqr/id494224742?l=sv&mt=8" target="_blank"><img
+                        src="<%= baseURL %>/images/iphone.png"><br/><%= text.iphone %></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.seamless.seqr" target="_blank"><img
+                        src="<%= baseURL %>/images/android.png"><br/><%= text.android %></a></li>
+                <li><a href="http://www.windowsphone.com/sv-se/store/app/seqr/7c25ac1c-dfb7-4cd5-b040-fdeef6ab09a8"
+                       target="_blank"><img src="<%= baseURL %>/images/windows.png"><br/><%= text.windows %></a></li>
+            </ul>
+        </div>
+    </div>
 
-	<!-- STATUS PAID -->
-	<div class="SEQR_STATUS SEQR_STATUS_PAID">
-		<img src="<%= baseURL %>/images/paymentdone.png" width="150">
-		<div class="seqr-content-paymentcomplete-message-title"><%= text.paid %></div>
-	</div>
+    <!-- STATUS PAID -->
+    <div class="SEQR_STATUS SEQR_STATUS_PAID">
+        <img src="<%= baseURL %>/images/paymentdone.png" width="150">
 
-	<!-- STATUS CANCELED -->
-	<div class="SEQR_STATUS SEQR_STATUS_CANCELED">
-		<img src="<%= baseURL %>/images/paymentcanceled.png" width="150">
-		<div class="seqr-content-paymentcomplete-message-title"><%= text.canceled %></div>
-	</div>
+        <div class="seqr-content-paymentcomplete-message-title"><%= text.paid %></div>
+    </div>
+
+    <!-- STATUS CANCELED -->
+    <div class="SEQR_STATUS SEQR_STATUS_CANCELED">
+        <img src="<%= baseURL %>/images/paymentcanceled.png" width="150">
+
+        <div class="seqr-content-paymentcomplete-message-title"><%= text.canceled %></div>
+    </div>
 
 </div>
