--- a/src/main/templates/standard_unsupported.html
+++ b/src/main/templates/standard_unsupported.html
@@ -1,17 +1,18 @@
 <!-- SEQR - UNSUPPORTED MOBILE DEVICES -->
 <div id="seqr-unsupported">
-	<div class="seqr-header">
-		<span data-translate="header"><%= text.header %></span>
-		<a href="https://www.seqr.com"><img src="<%= baseURL %>/images/seqr-logo.png" height="22" class="seqr-logo"></a>
-	</div>
+    <div class="seqr-content">
+        <img src="<%= baseURL %>/images/seqr-logo-horizontal-tagline-color.png" width="100%" class="seqr-logo">
 
-	<div class="seqr-content">
-		<div class="seqr-unsupported-message">
-
-			<h2 data-translate="notsupporteddevicetitle"><%= text.notsupporteddevicetitle %></h2>
-			<div class="seqr-unsupported-text" data-translate="notsupporteddevice"><%= text.notsupporteddevice %></div>
-			<div class="seqr-link"><a href="" data-translate="notsupporteddevicelink"><%= text.notsupporteddevicelink %></a></div>
-
-		</div>
-	</div>
+        <div class="seqr-unsupported-message">
+            <h2 data-translate="notsupporteddevicetitle"><%= text.notsupporteddevice %></h2>
+        </div>
+        <ul class="seqr-download">
+            <li><a href="https://itunes.apple.com/app/seqr/id494224742?l=sv&mt=8" target="_blank"><img
+                    src="<%= baseURL %>/images/iphone.png"><br/><%= text.iphone %></a></li>
+            <li><a href="https://play.google.com/store/apps/details?id=com.seamless.seqr" target="_blank"><img
+                    src="<%= baseURL %>/images/android.png"><br/><%= text.android %></a></li>
+            <li><a href="http://www.windowsphone.com/sv-se/store/app/seqr/7c25ac1c-dfb7-4cd5-b040-fdeef6ab09a8"
+                   target="_blank"><img src="<%= baseURL %>/images/windows.png"><br/><%= text.windows %></a></li>
+        </ul>
+    </div>
 </div>
