Changed to https url for video

--- a/src/main/templates/seqrShop.html
+++ b/src/main/templates/seqrShop.html
@@ -24,7 +24,7 @@
     <div class="seqr-notsupported"><%= text.unsupported %></div>
 
     <iframe class="seqr-video" width="220px" height="122px"
-            src="http://www.youtube.com/embed/GST4ofKoEM4?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720&controls=0"
+            src="https://www.youtube.com/embed/GST4ofKoEM4?rel=0&showinfo=0&theme=light&modestbranding=1&vq=hd720&controls=0"
             frameborder="0"></iframe>
 
     <ul class="seqr-download">
