--- a/src/main/css/seqrShop.css
+++ b/src/main/css/seqrShop.css
@@ -56,12 +56,15 @@
   display: none;
 }
 #seqr-container .seqr-link {
+  position: relative;
   width: 220px;
+  height: 49px;
+  line-height: 49px;
   float: left;
   text-align: center;
   background: #00a391;
   color: #ffffff;
-  padding: 15px 0;
+  padding: 0;
   margin: 7.5px 15px;
   border-radius: 5px;
   font-size: 19px;
@@ -70,6 +73,9 @@
 #seqr-container .seqr-link a {
   color: #ffffff;
   text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 #seqr-container .seqr-link .seqr-text-canceled {
   display: none;
